# interval-tree

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  draw.cpp  draw.hpp  interval_tree.hpp  interval_tree_fwd.hpp  interval_types.hpp
.github/workflows/: build_and_test.yml
cmake/: options.cmake
drawings/: CMakeLists.txt  example_drawings.hpp  main.cpp
example/: CMakeLists.txt
example/dot_graph/: CMakeLists.txt  main.cpp
example/from_readme/: CMakeLists.txt  main.cpp
include/interval-tree/: dot_graph.hpp  draw.hpp  feature_test.hpp  interval_tree.hpp  interval_tree_fwd.hpp  interval_types.hpp  optional.hpp  tree_hooks.hpp
include/interval_tree/: interval_tree.hpp
tests/: CMakeLists.txt  custom_interval_tests.hpp  dot_draw_tests.hpp  erase_tests.hpp  example_drawings.hpp  find_tests.hpp  float_overlap_tests.hpp  hook_tests.hpp  insert_tests.hpp  interval_io.hpp  interval_tests.hpp  interval_tree_tests.hpp  iteration_tests.hpp  make_drawable.sh  multi_join_interval.hpp  overlap_find_tests.hpp  overlap_tests.hpp  punch_tests.hpp  test_utility.hpp  tests.cpp  typedefs.hpp
